<resources>
    <string name="app_name">SQLiteDatabaseSimpleWriteDemo</string>
    <string name="title">Simple SQLite Write Demo</string>
    <string name="save_btn">Save</string>
    <string name="description_hint">input the description</string>
    <string name="name_hint">input the name</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="success_insert_message">Inserted with success a record with the id %d</string>
    <string name="id_placeholder">1</string>
    <string name="name_placeholder">Coiso</string>
    <string name="description_placeholder">the description e cenas</string>
    <string name="timestamp_placeholder">2020-01-01 18:20:00</string>
    <string name="fill_simple_table_btn">Fill Simple Table</string>
    <string name="auto_description">auto description %d</string>
    <string name="auto_name">auto name %d</string>
    <string name="records_count_placeholder">20</string>
    <string name="favorite_placeholder">true</string>
    <string name="separator_horizontal">-</string>
    <string name="list_view_menu_item">List View</string>
    <string name="cursor_recycler_view_menu_item">Cursor Recycler View</string>
</resources>